--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
   <title>KPIN - Home page</title>
 
-  <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
 
-  <link rel="stylesheet" href="../assets/css/maicons.css">
+  <link rel="stylesheet" href="assets/css/maicons.css">
 
-  <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
+  <link rel="stylesheet" href="assets/vendor/animate/animate.css">
 
-  <link rel="stylesheet" href="../assets/vendor/owl-carousel/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.carousel.min.css">
 
-  <link rel="stylesheet" href="../assets/css/bootstrap.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.css">
 
-  <link rel="stylesheet" href="../assets/css/mobster.css">
+  <link rel="stylesheet" href="assets/css/mobster.css">
 
 </head>
 <body>
@@ -30,7 +30,7 @@
 <nav class="navbar navbar-expand-lg navbar-light navbar-floating">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="../assets/logo.png" alt="" width="90" height="80">
+      <img src="assets/logo.png" alt="" width="90" height="80">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
   </div>
 </nav>
   
-<div class="page-hero-section bg-image hero-home-1" style="background-image: url(../assets/img/bg_hero_1.svg);">
+<div class="page-hero-section bg-image hero-home-1" style="background-image: url(assets/img/bg_hero_1.svg);">
   <div class="hero-caption pt-5">
     <div class="container h-100">
       <div class="row align-items-center h-100">
@@ -67,7 +67,7 @@
         </div>
         <div class="col-lg-6 d-none d-lg-block wow zoomIn">
           <div class="img-place mobile-preview shadow floating-animate">
-            <img src="../assets/img/banner-image.gif" alt="" style="width: 290px; height: 420px;">
+            <img src="assets/img/banner-image.gif" alt="" style="width: 290px; height: 420px;">
           </div>
         </div>
       </div>
@@ -77,14 +77,14 @@
 
 
 
-<div class="position-realive bg-image" style="background-image: url(../assets/img/pattern_1.svg);">
+<div class="position-realive bg-image" style="background-image: url(assets/img/pattern_1.svg);">
 
 <div class="page-section">
   <div class="container">
     <div class="row">
       <div class="col-lg-5 py-3">
         <div class="img-place mobile-preview shadow wow zoomIn">
-          <img src="../assets/img/andrew.png" alt=""style="width: 310px; height: 430px;">
+          <img src="assets/img/andrew.png" alt=""style="width: 310px; height: 430px;">
         </div>
       </div>
       <div class="col-lg-6 py-3 mt-lg-5">
@@ -148,7 +148,7 @@
       </div>
       <div class="col-lg-5 py-3">
         <div class="img-place mobile-preview shadow wow zoomIn">
-          <img src="../assets/img/sharnaya.png" style="width: 290px; height: 420px;" alt="">
+          <img src="assets/img/sharnaya.png" style="width: 290px; height: 420px;" alt="">
         </div>
       </div>
     </div>
@@ -166,7 +166,7 @@
       <div class="col-md-6 col-lg-3 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn">
           <div class="mb-3">
-            <img src="../assets/img/icons/rocket.svg" alt="">
+            <img src="assets/img/icons/rocket.svg" alt="">
           </div>
           <p class="fs-large">It’s Easy To Use</p>
           <p class="fs-small fg-grey text-left">
@@ -177,7 +177,7 @@
       <div class="col-md-6 col-lg-3 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="200ms">
           <div class="mb-3">
-            <img src="../assets/img/icons/testimony.svg" alt="">
+            <img src="assets/img/icons/testimony.svg" alt="">
           </div>
           <p class="fs-large">Social Network</p>
           <p class="fs-small fg-grey text-left">
@@ -188,7 +188,7 @@
       <div class="col-md-6 col-lg-3 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="400ms">
           <div class="mb-3">
-            <img src="../assets/img/icons/promotion.svg" alt="">
+            <img src="assets/img/icons/promotion.svg" alt="">
           </div>
           <p class="fs-large">Quality Results</p>
           <p class="fs-small fg-grey text-left">
@@ -199,7 +199,7 @@
       <div class="col-md-6 col-lg-3 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="600ms">
           <div class="mb-3">
-            <img src="../assets/img/icons/coins.svg" alt="">
+            <img src="assets/img/icons/coins.svg" alt="">
           </div>
           <p class="fs-large">Affordable Pricing</p>
           <p class="fs-small fg-grey text-left">
@@ -210,7 +210,7 @@
       <div class="col-md-6 col-lg-3 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="800ms">
           <div class="mb-3">
-            <img src="../assets/img/icons/support.svg" alt="">
+            <img src="assets/img/icons/support.svg" alt="">
           </div>
           <p class="fs-large">Free Support</p>
           <p class="fs-small fg-grey text-left">
@@ -221,7 +221,7 @@
       <div class="col-md-6 col-lg-3 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="1000ms">
           <div class="mb-3">
-            <img src="../assets/img/icons/laptop.svg" alt="">
+            <img src="assets/img/icons/laptop.svg" alt="">
           </div>
           <p class="fs-large">Analytics</p>
           <p class="fs-small fg-grey text-left">
@@ -239,7 +239,7 @@
     <div class="row">
       <div class="col-lg-7 py-3 mb-5 mb-lg-0">
         <div class="img-place w-lg-75 wow zoomIn">
-          <img src="../assets/img/illustration_contact.svg" alt="">
+          <img src="assets/img/illustration_contact.svg" alt="">
         </div>
       </div>
       <div class="col-lg-5 py-3">
@@ -325,7 +325,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 col-md-6 py-2">
-        <img src="../assets/" alt="" width="80" >
+        <img src="assets/" alt="" width="80" >
         <!-- Please don't remove or modify the credits below -->
         <p class="d-inline-block ml-2">Copyright &copy; <a href="" class="fg-white fw-medium">KPIN</a>. All rights reserved</p>
       </div>
@@ -339,15 +339,15 @@
   </div>
 </div>
 
-<script src="../assets/js/jquery-3.5.1.min.js"></script>
+<script src="assets/js/jquery-3.5.1.min.js"></script>
 
-<script src="../assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
 
-<script src="../assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+<script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
 
-<script src="../assets/vendor/wow/wow.min.js"></script>
+<script src="assets/vendor/wow/wow.min.js"></script>
 
-<script src="../assets/js/mobster.js"></script>
+<script src="assets/js/mobster.js"></script>
 
 </body>
 </html>
