--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           <a href="#" class="btn btn-primary rounded-pill">Get App Now</a>
         </div>
         <div class="col-lg-6 d-none d-lg-block wow zoomIn">
-          <div class="img-place mobile-preview shadow floating-animate">
-            <img src="assets/img/banner-image.gif" alt="" style="width: 290px; height: 420px;">
+          <div class="img mobile-preview  floating-animate">
+            <img src="assets/img/banner-image.gif" alt="" style="width: 350px; height:480px; ">
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-5 py-3">
-        <div class="img-place mobile-preview shadow wow zoomIn">
+        <div class="img-place mobile-preview wow zoomIn">
           <img src="assets/img/andrew.png" alt=""style="width: 310px; height: 430px;">
         </div>
       </div>
@@ -147,7 +147,7 @@
         <a href="#" class="btn btn-outline-primary rounded-pill">How it works</a>
       </div>
       <div class="col-lg-5 py-3">
-        <div class="img-place mobile-preview shadow wow zoomIn">
+        <div class="img-place mobile-preview wow zoomIn">
           <img src="assets/img/sharnaya.png" style="width: 290px; height: 420px;" alt="">
         </div>
       </div>
@@ -163,7 +163,7 @@
     <h1 class="text-center">Why Choose KPIN.IN</h1>
 
     <div class="row justify-content-center mt-5">
-      <div class="col-md-6 col-lg-3 py-3">
+      <div class="col-md-6 col-lg-4 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn">
           <div class="mb-3">
             <img src="assets/img/icons/rocket.svg" alt="">
@@ -174,7 +174,7 @@
             </p>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 py-3">
+      <div class="col-md-6 col-lg-4 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="200ms">
           <div class="mb-3">
             <img src="assets/img/icons/testimony.svg" alt="">
@@ -185,7 +185,7 @@
             </p>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 py-3">
+      <div class="col-md-6 col-lg-4 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="400ms">
           <div class="mb-3">
             <img src="assets/img/icons/promotion.svg" alt="">
@@ -196,7 +196,7 @@
             </p>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 py-3">
+      <div class="col-md-6 col-lg-4 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="600ms">
           <div class="mb-3">
             <img src="assets/img/icons/coins.svg" alt="">
@@ -207,7 +207,7 @@
             </p>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 py-3">
+      <div class="col-md-6 col-lg-4 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="800ms">
           <div class="mb-3">
             <img src="assets/img/icons/support.svg" alt="">
@@ -218,7 +218,7 @@
             </p>
         </div>
       </div>
-      <div class="col-md-6 col-lg-3 py-3">
+      <div class="col-md-6 col-lg-4 py-3">
         <div class="card card-body border-0 bg-transparent text-center wow zoomIn" data-wow-delay="1000ms">
           <div class="mb-3">
             <img src="assets/img/icons/laptop.svg" alt="">
