--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav ml-lg-5 mt-3 mt-lg-0">
         <li class="nav-item dropdown active">
-          <a class="nav-link" href="about.html">Home</a>         
+          <a class="nav-link" href="index.html">Home</a>         
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="about.html">How It Works</a>
+          <a class="nav-link" href="">How It Works</a>
         </li>
         
       </ul>
@@ -292,7 +292,7 @@
       <div class="col-md-6 col-lg-4 py-3">
         <h5 class="mb-3">Compare</h5>
         <ul class="menu-link">
-          <li><a href="#" class="">KPIN vs bio.fm</a></li>
+          <li><a href="kpinvslink.html" class="">KPIN vs bio.fm</a></li>
           <li><a href="#" class="">KPIN vs Linktree</a></li>
           
         </ul>
