--- a/kpinvslink.html
+++ b/kpinvslink.html
@@ -13,17 +13,18 @@
   <title>Mobster - One page app template</title>
 
 
-  <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 
-  <link rel="stylesheet" href="../assets/css/maicons.css">
+  <link rel="stylesheet" href="assets/css/maicons.css">
 
-  <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
+  <link rel="stylesheet" href="assets/vendor/animate/animate.css">
 
-  <link rel="stylesheet" href="../assets/vendor/owl-carousel/css/owl.carousel.min.css">
+  <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.carousel.min.css">
 
-  <link rel="stylesheet" href="../assets/css/bootstrap.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.css">
 
-  <link rel="stylesheet" href="../assets/css/mobster.css">
+  <link rel="stylesheet" href="assets/css/mobster.css">
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
 <body>
@@ -54,7 +55,7 @@
     </div>
   </nav>
 
-<div class="page-hero-section bg-image hero-home-2" style="background-image: url(../assets/img/bg_hero_2.svg);">
+<div class="page-hero-section bg-image hero-home-2" style="background-image: url(assets/img/bg_hero_2.svg);">
   <div class="hero-caption">
     <div class="container fg-white h-100">
       <div class="row align-items-center h-100">
@@ -276,15 +277,15 @@
 
 
 
-<script src="../assets/js/jquery-3.5.1.min.js"></script>
+<script src="assets/js/jquery-3.5.1.min.js"></script>
 
-<script src="../assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
 
-<script src="../assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+<script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
 
-<script src="../assets/vendor/wow/wow.min.js"></script>
+<script src="assets/vendor/wow/wow.min.js"></script>
 
-<script src="../assets/js/mobster.js"></script>
+<script src="assets/js/mobster.js"></script>
 
 </body>
 </html>
