added kip vs linktree

--- a/index.html
+++ b/index.html
@@ -292,8 +292,8 @@
       <div class="col-md-6 col-lg-4 py-3">
         <h5 class="mb-3">Compare</h5>
         <ul class="menu-link">
-          <li><a href="kpinvslink.html" class="">KPIN vs bio.fm</a></li>
-          <li><a href="#" class="">KPIN vs Linktree</a></li>
+          <li><a href="kpinvsbio.html" class="">KPIN vs bio.fm</a></li>
+          <li><a href="kpinvslinktree.html" class="">KPIN vs Linktree</a></li>
           
         </ul>
       </div>
