--- a/kpinvsbio.html
+++ b/kpinvsbio.html
@@ -10,10 +10,9 @@
 
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
 
-  <title>Mobster - One page app template</title>
+  <title>KPIN vs BIO.FM</title>
 
-
-  <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
 
   <link rel="stylesheet" href="assets/css/maicons.css">
 
