add tc and privacy

--- a/index.html
+++ b/index.html
@@ -284,8 +284,8 @@
       <div class="col-sm-6 col-lg-2 py-3">
         <h5 class="mb-3">Legal</h5>
         <ul class="menu-link">
-          <li><a href="#" class="">Terms & Conditions</a></li>
-          <li><a href="#" class="">Privacy Policy</a></li>
+          <li><a href="tc.html" class="">Terms & Conditions</a></li>
+          <li><a href="privacy.html" class="">Privacy Policy</a></li>
           
         </ul>
       </div>
