--- a/kpinvsbio.html
+++ b/kpinvsbio.html
@@ -210,23 +210,23 @@
         <div class="col-sm-6 col-lg-2 py-3">
           <h5 class="mb-3">Navigate</h5>
           <ul class="menu-link">
-            <li><a href="#" class="">Home</a></li>
+            <li><a href="index.html" class="">Home</a></li>
             <li><a href="#" class="">How It Works</a></li>
           </ul>
         </div>
         <div class="col-sm-6 col-lg-2 py-3">
           <h5 class="mb-3">Legal</h5>
           <ul class="menu-link">
-            <li><a href="#" class="">Terms & Conditions</a></li>
-            <li><a href="#" class="">Privacy Policy</a></li>
+            <li><a href="tc.html" class="">Terms & Conditions</a></li>
+            <li><a href="privacy.html" class="">Privacy Policy</a></li>
             
           </ul>
         </div>
         <div class="col-md-6 col-lg-4 py-3">
           <h5 class="mb-3">Compare</h5>
           <ul class="menu-link">
-            <li><a href="#" class="">KPIN vs bio.fm</a></li>
-            <li><a href="#" class="">KPIN vs Linktree</a></li>
+            <li><a href="kpinvsbio.html" class="">KPIN vs bio.fm</a></li>
+            <li><a href="kpinvslinktree.html" class="">KPIN vs Linktree</a></li>
             
           </ul>
         </div>
