--- a/privacy.html
+++ b/privacy.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark navbar-floating">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="" alt="" width="40">
+                <strong class="text-light">KPIN.IN</strong>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
                 aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
