--- a/privacy.html
+++ b/privacy.html
@@ -13,17 +13,17 @@
 
     <title>KPIN.IN Privacy Policy </title>
 
-    <link rel="shortcut icon" href="/assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="/assets/css/maicons.css">
+    <link rel="stylesheet" href="assets/css/maicons.css">
 
-    <link rel="stylesheet" href="/assets/vendor/animate/animate.css">
+    <link rel="stylesheet" href="assets/vendor/animate/animate.css">
 
-    <link rel="stylesheet" href="/assets/vendor/owl-carousel/css/owl.carousel.min.css">
+    <link rel="stylesheet" href="assets/vendor/owl-carousel/css/owl.carousel.min.css">
 
-    <link rel="stylesheet" href="/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="assets/css/bootstrap.css">
 
-    <link rel="stylesheet" href="/assets/css/mobster.css">
+    <link rel="stylesheet" href="assets/css/mobster.css">
 </head>
 
 <body>
@@ -54,7 +54,7 @@
     </nav>
 
     <main>
-        <div class="page-hero-section bg-image hero-mini" style="background-image: url(../assets/img/hero_mini.svg);">
+        <div class="page-hero-section bg-image hero-mini" style="background-image: url(assets/img/hero_mini.svg);">
             <div class="hero-caption">
 
             </div>
@@ -219,15 +219,15 @@
         </div>
       </div> <!-- .page-footer -->
 
-    <script src="../assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
 
-    <script src="../assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
 
-    <script src="../assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
+    <script src="assets/vendor/owl-carousel/js/owl.carousel.min.js"></script>
 
-    <script src="../assets/vendor/wow/wow.min.js"></script>
+    <script src="assets/vendor/wow/wow.min.js"></script>
 
-    <script src="../assets/js/mobster.js"></script>
+    <script src="assets/js/mobster.js"></script>
 
 </body>
 
