added how it works

--- a/privacy.html
+++ b/privacy.html
@@ -41,9 +41,12 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav  mt-2 mt-lg-0">
                    
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
+                  <li class="nav-item dropdown active">
+                    <a class="nav-link " href="index.html"><strong>Home</strong></a>         
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link " href="howitworks.html"><strong>How It Works</strong></a>
+                  </li>
                    
                 </ul>
                 <div class="ml-auto my-2 my-lg-0">
