--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav ml-lg-5 mt-3 mt-lg-0">
         <li class="nav-item dropdown active">
-          <a class="nav-link" href="index.html">Home</a>         
+          <a class="nav-link " href="index.html"><strong>Home</strong></a>         
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="">How It Works</a>
+          <a class="nav-link " href="howitworks.html"><strong>How It Works</strong></a>
         </li>
         
       </ul>
@@ -138,13 +138,13 @@
     <div class="row">
       <div class="col-lg-6 offset-lg-1 py-3 mt-lg-5 wow fadeInUp">
         <h3 class="mb-4">KPIN .IN enables you to Integrate your social media platform together with your Bio</h3>
-        <p class="mb-4">You can add <br>
-          Instagram , Youtube <br>
-          Facebook , LinkedIn  <br>
-          Spotify, Tweeter <br>
-          And many more
+        <p class="mb-4">You can add 
+          Instagram, <br>
+          Youtube, Facebook, LinkedIn <br>  
+          Spotify, Twiter and <br>
+          many more.
           </p>
-        <a href="#" class="btn btn-outline-primary rounded-pill">How it works</a>
+        <a href="howitworks.html" class="btn btn-outline-primary rounded-pill">How it works</a>
       </div>
       <div class="col-lg-5 py-3">
         <div class="img-place mobile-preview wow zoomIn">
@@ -277,8 +277,8 @@
       <div class="col-sm-6 col-lg-2 py-3">
         <h5 class="mb-3">Navigate</h5>
         <ul class="menu-link">
-          <li><a href="#" class="">Home</a></li>
-          <li><a href="#" class="">How It Works</a></li>
+          <li><a href="index.html" class="">Home</a></li>
+          <li><a href="howitworks.html" class="">How It Works</a></li>
         </ul>
       </div>
       <div class="col-sm-6 col-lg-2 py-3">
