fix some issues

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
 
   <link rel="stylesheet" href="assets/css/mobster.css">
 
+  <link rel="stylesheet" href="index.css">
+
 </head>
 <body>
 
@@ -84,7 +86,7 @@
     <div class="row">
       <div class="col-lg-5 py-3">
         <div class="img-place mobile-preview wow zoomIn">
-          <img src="assets/img/andrew.png" alt=""style="width: 310px; height: 430px;">
+          <img src="assets/img/andrew.png" alt=""style="width: 260px; height: 460px;">
         </div>
       </div>
       <div class="col-lg-6 py-3 mt-lg-5">
@@ -137,7 +139,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-6 offset-lg-1 py-3 mt-lg-5 wow fadeInUp">
-        <h3 class="mb-4">KPIN .IN enables you to Integrate your social media platform together with your Bio</h3>
+        <h3 class="mb-4">KPIN.IN enables you to Integrate your social media platform together with your Bio</h3>
         <p class="mb-4">You can add 
           Instagram, <br>
           Youtube, Facebook, LinkedIn <br>  
@@ -233,39 +235,18 @@
   </div>
 </div>
 
-
-<div class="page-section">
+<div class="page-section no-scroll">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-7 py-3 mb-5 mb-lg-0">
-        <div class="img-place w-lg-75 wow zoomIn">
-          <img src="assets/img/illustration_contact.svg" alt="">
+    <div class="row align-items-center">
+      <div class="col-lg-6 wow fadeIn">
+        <div class="img-place">
+          <img src="/assets/img/andrew.png" alt="">
         </div>
       </div>
-      <div class="col-lg-5 py-3">
-        <h1 class="wow fadeInUp">Need a help? <br>
-        Don't worry just contact us</h1>
-
-        <form method="POST" class="mt-5">
-          <div class="form-group wow fadeInUp">
-            <label for="name" class="fw-medium fg-grey">Fullname</label>
-            <input type="text" class="form-control" id="name">
-          </div>
-
-          <div class="form-group wow fadeInUp">
-            <label for="email" class="fw-medium fg-grey">Email</label>
-            <input type="text" class="form-control" id="email">
-          </div>
-
-          <div class="form-group wow fadeInUp">
-            <label for="message" class="fw-medium fg-grey">Message</label>
-            <textarea rows="6" class="form-control" id="message"></textarea>
-          </div>
-
-          <div class="form-group mt-4 wow fadeInUp">
-            <button type="submit" class="btn btn-primary">Send Message</button>
-          </div>
-        </form>
+      <div class="col-lg-5 pl-lg-5 wow fadeInUp">
+        <h2 class="mb-4"><strong>Try it for free</strong></h2>
+        <p class="mb-4">Thousands of people use bio as a simple way to build their own personal website in seconds. Create your own meaningful link in bio today for free . Join for free!</p>
+        <a href="#" class="btn btn-outline-primary rounded-pill">Get Started</a>
       </div>
     </div>
   </div>
@@ -324,16 +305,12 @@
 
   <div class="container">
     <div class="row">
-      <div class="col-12 col-md-6 py-2">
-        <img src="assets/" alt="" width="80" >
-        <!-- Please don't remove or modify the credits below -->
-        <p class="d-inline-block ml-2">Copyright &copy; <a href="" class="fg-white fw-medium">KPIN</a>. All rights reserved</p>
+      <div class="col-12 col-md-9 py-2">
+        <p>Copyright &copy; 2020 KPIN.IN - Kohli Media LLP.</p>
       </div>
-      <div class="col-12 col-md-6 py-2">
-        <ul class="nav justify-content-end">
-          <li class="nav-item"><a href="#" class="nav-link"></a></li>
-          
-        </ul>
+      <div class="col-12 col-md-auto">
+        <span class="mwl">#MadeWithLove</span>
+        <span class="ks">&hearts; <a href="http://www.kohli.studio/">Kohli.Studio</a></span>
       </div>
     </div>
   </div>
