--- a/kpinvsbio.html
+++ b/kpinvsbio.html
@@ -257,16 +257,12 @@
   
     <div class="container">
       <div class="row">
-        <div class="col-12 col-md-6 py-2">
-          <img src="assets/" alt="" width="80" >
-          <!-- Please don't remove or modify the credits below -->
-          <p class="d-inline-block ml-2">Copyright &copy; <a href="" class="fg-white fw-medium">KPIN</a>. All rights reserved</p>
+        <div class="col-12 col-md-9 py-2">
+          <p>Copyright &copy; 2020 KPIN.IN - Kohli Media LLP.</p>
         </div>
-        <div class="col-12 col-md-6 py-2">
-          <ul class="nav justify-content-end">
-            <li class="nav-item"><a href="#" class="nav-link"></a></li>
-            
-          </ul>
+        <div class="col-12 col-md-auto">
+          <span class="mwl">#MadeWithLove</span>
+          <span class="ks">&hearts; <a href="http://www.kohli.studio/">Kohli.Studio</a></span>
         </div>
       </div>
     </div>
