--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     <div class="row align-items-center">
       <div class="col-lg-6 wow fadeIn">
         <div class="img-place">
-          <img src="/assets/img/andrew.png" alt="">
+          <img src="/assets/img/andrew.png" style="width: 310px; height: 470px;" alt="">
         </div>
       </div>
       <div class="col-lg-5 pl-lg-5 wow fadeInUp">
