--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       </div>
       <div class="col-lg-5 pl-lg-5 wow fadeInUp">
         <h2 class="mb-4"><strong>Try it for free</strong></h2>
-        <p class="mb-4">Thousands of people use bio as a simple way to build their own personal website in seconds. Create your own meaningful link in bio today for free . Join for free!</p>
+        <p class="mb-4">Thousands of people use Kpin as a simple way to build their own personal website in seconds. Create your own meaningful link in kpin today for free. Join for free!</p>
         <a href="#" class="btn btn-outline-primary rounded-pill">Get Started</a>
       </div>
     </div>
