added join kpin commnunity

--- a/index.html
+++ b/index.html
@@ -252,6 +252,64 @@
   </div>
 </div>
 
+<div class="page-section no-scroll" style="background-color: rgb(120, 190, 223);">
+  <div class="container">
+    <h2 class="text-center wow fadeIn">Join the KPIN.IN community</h2>
+
+    <div class="row justify-content-center mt-5">
+      <div class="col-lg-10">
+        <div class="row justify-content-center">
+          <div class="col-md-6 col-lg-4 py-3 wow fadeInLeft">
+            <div class="card card-body border-0 text-center shadow pt-5">
+              <div class="svg-icon mx-auto mb-4">
+                <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
+              </div>
+              <h5 class="fg-gray">John Doe</h5>
+              <p class="fs-small">1M Followers</p>
+              <div class="align-item-inline">
+              <i class="fab fa-instagram fa-2x" aria-hidden="true"></i>
+              <i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i>
+              <i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i>
+              <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
+                 </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4 py-3 wow fadeInUp">
+            <div class="card card-body border-0 text-center shadow pt-5">
+                <div class="svg-icon mx-auto mb-4">
+                    <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/jane.jpg" width="100" height="100" alt="">
+                  </div>
+                  <h5 class="fg-gray">Jane Doe</h5>
+                  <p class="fs-small">5M Followers</p>
+                  <div class="align-item-inline">
+                  <i class="fab fa-instagram fa-2x" aria-hidden="true"></i>
+                  <i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i>
+                  <i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i>
+                  <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
+                     </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-4 py-3 wow fadeInUp">
+            <div class="card card-body border-0 text-center shadow pt-5">
+                <div class="svg-icon mx-auto mb-4">
+                    <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
+                  </div>
+                  <h5 class="fg-gray">John Doe</h5>
+                  <p class="fs-small">10M Followers</p>
+                  <div class="align-item-inline">
+                  <i class="fab fa-instagram fa-2x" aria-hidden="true"></i>
+                  <i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i>
+                  <i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i>
+                  <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
+                </div>
+          </div>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div class="page-footer-section bg-dark fg-white">
   <div class="container">
     <div class="row mb-5 py-3">
