--- a/index.html
+++ b/index.html
@@ -26,10 +26,15 @@
 
   <link rel="stylesheet" href="index.css">
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
+
+  <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  -->
+
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light navbar-floating">
+<nav class="navbar navbar-expand-lg bg-transparent navbar-floating">
   <div class="container">
     <a class="navbar-brand" href="#">
       <img src="assets/logo.png" alt="" width="90" height="80">
@@ -253,61 +258,186 @@
 </div>
 
 <div class="page-section no-scroll" style="background-color: rgb(120, 190, 223);">
-  <div class="container">
-    <h2 class="text-center wow fadeIn">Join the KPIN.IN community</h2>
-
-    <div class="row justify-content-center mt-5">
-      <div class="col-lg-10">
-        <div class="row justify-content-center">
-          <div class="col-md-6 col-lg-4 py-3 wow fadeInLeft">
-            <div class="card card-body border-0 text-center shadow pt-5">
-              <div class="svg-icon mx-auto mb-4">
-                <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
+    <h1 class="text-center">Join the KPIN.IN Community</h1>
+  
+  <div id="carouselExampleIndicators" style="height:400px;" class="carousel slide" data-bs-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
+      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
+      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="row justify-content-center mt-5">
+            <div class="col-lg-10">
+              <div class="row justify-content-center">
+                <div class="d-none d-lg-block d-xl-block col-lg-4 py-3">
+                  <div class="card card-body border-0 text-center shadow pt-5">
+                    <div class="svg-icon mx-auto mb-4">
+                      <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
+                    </div>
+                    <h5 class="fg-gray">John Doe</h5>
+                    <p class="fs-small">1M Followers</p>
+                    <div class="align-item-inline">
+                      <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                      <a href=""><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                      <a href=""><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                      <a href=""><i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i></a>
+                       </div>
+                  </div>
+                </div>
+                <div class="d-none  d-lg-block col-md-6 col-lg-4 py-3">
+                  <div class="card card-body border-0 text-center shadow pt-5">
+                      <div class="svg-icon mx-auto mb-4">
+                          <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/jane.jpg" width="100" height="100" alt="">
+                        </div>
+                        <h5 class="fg-gray">Jane Doe</h5>
+                        <p class="fs-small">5M Followers</p>
+                        <div class="align-item-inline">
+                          <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i></a>
+                           </div>
+                </div>
               </div>
-              <h5 class="fg-gray">John Doe</h5>
-              <p class="fs-small">1M Followers</p>
-              <div class="align-item-inline">
-              <i class="fab fa-instagram fa-2x" aria-hidden="true"></i>
-              <i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i>
-              <i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i>
-              <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
-                 </div>
+              <div class="d-none d-lg-block d-xl-block col-lg-4 py-3">
+                  <div class="card card-body border-0 text-center shadow pt-5">
+                      <div class="svg-icon mx-auto mb-4">
+                          <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
+                        </div>
+                        <h5 class="fg-gray">John Doe</h5>
+                        <p class="fs-small">10M Followers</p>
+                        <div class="align-item-inline">
+                          <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i></a>
+                           </div>
+                </div>
+              </div>
+              </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 py-3 wow fadeInUp">
-            <div class="card card-body border-0 text-center shadow pt-5">
-                <div class="svg-icon mx-auto mb-4">
-                    <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/jane.jpg" width="100" height="100" alt="">
+      </div>
+      <div class="carousel-item">
+        <div class="row justify-content-center mt-5">
+            <div class="col-lg-10">
+              <div class="row justify-content-center">
+                <div class="d-none d-lg-block d-xl-block col-lg-4 py-3">
+                  <div class="card card-body border-0 text-center shadow pt-5">
+                    <div class="svg-icon mx-auto mb-4">
+                      <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
+                    </div>
+                    <h5 class="fg-gray">John Doe</h5>
+                    <p class="fs-small">1M Followers</p>
+                    <div class="align-item-inline">
+                      <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                      <a href=""><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                      <a href=""><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                      <a href=""><i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i></a>
+                       </div>
                   </div>
-                  <h5 class="fg-gray">Jane Doe</h5>
-                  <p class="fs-small">5M Followers</p>
-                  <div class="align-item-inline">
-                  <i class="fab fa-instagram fa-2x" aria-hidden="true"></i>
-                  <i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i>
-                  <i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i>
-                  <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
-                     </div>
-          </div>
-        </div>
-        <div class="col-md-6 col-lg-4 py-3 wow fadeInUp">
-            <div class="card card-body border-0 text-center shadow pt-5">
-                <div class="svg-icon mx-auto mb-4">
-                    <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
-                  </div>
-                  <h5 class="fg-gray">John Doe</h5>
-                  <p class="fs-small">10M Followers</p>
-                  <div class="align-item-inline">
-                  <i class="fab fa-instagram fa-2x" aria-hidden="true"></i>
-                  <i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i>
-                  <i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i>
-                  <i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i>
                 </div>
+                <div class="d-block col-md-6 col-lg-4 py-3">
+                  <div class="card card-body border-0 text-center shadow pt-5">
+                      <div class="svg-icon mx-auto mb-4">
+                          <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/jane.jpg" width="100" height="100" alt="">
+                        </div>
+                        <h5 class="fg-gray">Jane Doe</h5>
+                        <p class="fs-small">5M Followers</p>
+                        <div class="align-item-inline">
+                          <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i></a>
+                           </div>
+                </div>
+              </div>
+              <div class="d-none d-lg-block d-xl-block col-lg-4 py-3">
+                  <div class="card card-body border-0 text-center shadow pt-5">
+                      <div class="svg-icon mx-auto mb-4">
+                          <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
+                        </div>
+                        <h5 class="fg-gray">John Doe</h5>
+                        <p class="fs-small">10M Followers</p>
+                        <div class="align-item-inline">
+                          <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i></a>
+                           </div>
+                </div>
+              </div>
+              </div>
+            </div>
           </div>
-        </div>
-        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="row justify-content-center mt-5">
+            <div class="col-lg-10">
+              <div class="row justify-content-center">
+                <div class="d-none d-lg-block d-xl-block col-lg-4 py-3 ">
+                  <div class="card card-body border-0 text-center shadow pt-5">
+                    <div class="svg-icon mx-auto mb-4">
+                      <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
+                    </div>
+                    <h5 class="fg-gray">John Doe</h5>
+                    <p class="fs-small">1M Followers</p>
+                    <div class="align-item-inline">
+                      <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                      <a href=""><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                      <a href=""><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                      <a href=""><i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i></a>
+                       </div>
+                  </div>
+                </div>
+                <div class="d-none d-lg-block d-xl-block col-lg-4 py-3">
+                  <div class="card card-body border-0 text-center shadow pt-5">
+                      <div class="svg-icon mx-auto mb-4">
+                          <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/jane.jpg" width="100" height="100" alt="">
+                        </div>
+                        <h5 class="fg-gray">Jane Doe</h5>
+                        <p class="fs-small">5M Followers</p>
+                        <div class="align-item-inline">
+                          <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i></a>
+                           </div>
+                </div>
+              </div>
+              <div class="d-block col-lg-4 py-3">
+                  <div class="card card-body border-0 text-center shadow pt-5">
+                      <div class="svg-icon mx-auto mb-4">
+                          <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
+                        </div>
+                        <h5 class="fg-gray">John Doe</h5>
+                        <p class="fs-small">10M Followers</p>
+                        <div class="align-item-inline">
+                          <a href=""><i class="fab fa-instagram fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-facebook-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fab fa-twitter-square fa-2x" aria-hidden="true"></i></a>
+                          <a href=""><i class="fas fa-envelope-square fa-2x" aria-hidden="true"></i></a>
+                           </div>
+                </div>
+              </div>
+              </div>
+            </div>
+          </div>
       </div>
     </div>
+    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden"></span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden"></span>
+    </a>
   </div>
+    
+ 
 </div>
 
 <div class="page-footer-section bg-dark fg-white">
@@ -350,11 +480,11 @@
 
         <!-- Social Media Button -->
         <div class="mt-4">
-          <a href="#" class="btn btn-fab btn-primary fg-white"><span class="mai-logo-facebook"></span></a>
-          <a href="#" class="btn btn-fab btn-primary fg-white"><span class="mai-logo-twitter"></span></a>
-          <a href="#" class="btn btn-fab btn-primary fg-white"><span class="mai-logo-instagram"></span></a>
-          <a href="#" class="btn btn-fab btn-primary fg-white"><span class="mai-logo-google"></span></a>
-        </div>
+            <a href="#" class="btn btn-fab btn-primary fg-white"><span class="mai-logo-facebook"></span></a>
+            <a href="#" class="btn btn-fab btn-primary fg-white"><span class="mai-logo-twitter"></span></a>
+            <a href="#" class="btn btn-fab btn-primary fg-white"><span class="mai-logo-instagram"></span></a>
+            <a href="#" class="btn btn-fab btn-primary fg-white"><span class="mai-logo-google"></span></a>
+         </div>
       </div>
     </div>
   </div>
@@ -383,6 +513,9 @@
 <script src="assets/vendor/wow/wow.min.js"></script>
 
 <script src="assets/js/mobster.js"></script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+
 
 </body>
 </html>
