added logo and fix carousel

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <nav class="navbar navbar-expand-lg bg-transparent navbar-floating">
   <div class="container">
     <a class="navbar-brand" href="#">
-      <img src="assets/logo.png" alt="" width="90" height="80">
+      <img src="assets/KPIN.svg" alt="" width="100" height="90">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -45,16 +45,10 @@
   
     <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav ml-lg-5 mt-3 mt-lg-0">
-        <li class="nav-item dropdown active">
-          <a class="nav-link " href="index.html"><strong>Home</strong></a>         
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="howitworks.html"><strong>How It Works</strong></a>
-        </li>
         
       </ul>
       <div class="ml-auto my-2 my-lg-0">
-        <button class="btn btn-dark rounded-pill">Download Now</button>
+        <button class="btn btn-dark rounded-pill">Login</button>
       </div>
     </div>
   </div>
@@ -70,11 +64,11 @@
           <p class="mb-4">You get one link at a time on your social profile, 
              <br>
              Make it count With KPIN.IN and turn unlimited links into one.</p>
-          <a href="#" class="btn btn-primary rounded-pill">Get App Now</a>
+          <a href="#" class="btn btn-primary rounded-pill">Get Started for Free</a>
         </div>
         <div class="col-lg-6 d-none d-lg-block wow zoomIn">
           <div class="img mobile-preview  floating-animate">
-            <img src="assets/img/banner-image.gif" alt="" style="width: 350px; height:480px; ">
+            <img  class="ml-5" src="assets/img/banner-image.gif" alt="" style="width: 380px; height:480px; ">
           </div>
         </div>
       </div>
@@ -91,7 +85,7 @@
     <div class="row">
       <div class="col-lg-5 py-3">
         <div class="img-place mobile-preview wow zoomIn">
-          <img src="assets/img/andrew.png" alt=""style="width: 260px; height: 460px;">
+          <img class="ml-3" src="assets/img/andrew.png" alt=""style="width: 290px; height: 460px;">
         </div>
       </div>
       <div class="col-lg-6 py-3 mt-lg-5">
@@ -271,7 +265,7 @@
         <div class="row justify-content-center mt-5">
             <div class="col-lg-10">
               <div class="row justify-content-center">
-                <div class="d-block d-lg-block d-xl-block col-lg-4 py-3">
+                <div class="d-block col-md-5 col-lg-4 py-3">
                   <div class="card card-body border-0 text-center shadow pt-5">
                     <div class="svg-icon mx-auto mb-4">
                       <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
@@ -286,7 +280,7 @@
                        </div>
                   </div>
                 </div>
-                <div class="d-none  d-lg-block col-md-6 col-lg-4 py-3">
+                <div class="d-none d-md-block d-lg-block d-xl-block col-md-5 col-lg-4 py-3">
                   <div class="card card-body border-0 text-center shadow pt-5">
                       <div class="svg-icon mx-auto mb-4">
                           <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/jane.jpg" width="100" height="100" alt="">
@@ -339,7 +333,7 @@
                        </div>
                   </div>
                 </div>
-                <div class="d-block col-md-6 col-lg-4 py-3">
+                <div class="d-block col-md-5 col-lg-4 py-3">
                   <div class="card card-body border-0 text-center shadow pt-5">
                       <div class="svg-icon mx-auto mb-4">
                           <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/jane.jpg" width="100" height="100" alt="">
@@ -354,7 +348,7 @@
                            </div>
                 </div>
               </div>
-              <div class="d-none d-lg-block d-xl-block col-lg-4 py-3">
+              <div class="d-none d-md-block d-lg-block d-xl-block col-md-5 col-lg-4 py-3">
                   <div class="card card-body border-0 text-center shadow pt-5">
                       <div class="svg-icon mx-auto mb-4">
                           <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
@@ -377,7 +371,7 @@
         <div class="row justify-content-center mt-5">
             <div class="col-lg-10">
               <div class="row justify-content-center">
-                <div class="d-none d-lg-block d-xl-block col-lg-4 py-3 ">
+                <div class="d-none d-md-block d-lg-block d-xl-block col-md-5 col-lg-4 py-3 ">
                   <div class="card card-body border-0 text-center shadow pt-5">
                     <div class="svg-icon mx-auto mb-4">
                       <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
@@ -407,7 +401,7 @@
                            </div>
                 </div>
               </div>
-              <div class="d-block col-lg-4 py-3">
+              <div class="d-block col-md-5 col-lg-4 py-3">
                   <div class="card card-body border-0 text-center shadow pt-5">
                       <div class="svg-icon mx-auto mb-4">
                           <img style="border-radius:50px; border: 4px solid rgb(53, 161, 211);" class="img" src="assets/img/john.jpg" width="100" height="100" alt="">
