--- a/kpinvsbio.html
+++ b/kpinvsbio.html
@@ -30,8 +30,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-light navbar-floating">
     <div class="container">
-      <a class="navbar-brand" href="#">
-        <strong class="text-light">KPIN.IN</strong>
+      <a class="navbar-brand" href="index.html">
+        <img src="assets/KPIN.svg" alt="" width="100" height="90">
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -39,16 +39,16 @@
     
       <div class="collapse navbar-collapse" id="navbarToggler">
         <ul class="navbar-nav ml-lg-5 mt-3 mt-lg-0">
-          <li class="nav-item dropdown active">
+         <!--  <li class="nav-item dropdown active">
             <a class="nav-link" href="index.html">Home</a>         
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">How It Works</a>
-          </li>
+          </li> -->
           
         </ul>
         <div class="ml-auto my-2 my-lg-0">
-          <button class="btn btn-dark rounded-pill">Download Now</button>
+          <button class="btn btn-dark rounded-pill">Login</button>
         </div>
       </div>
     </div>
@@ -72,7 +72,7 @@
 
           </p>
 
-          <a href="#" class="btn btn-dark">Get Started</a>
+          <a href="#" class="btn btn-dark">Get Started for Free</a>
 
         </div>
         <div class="col-lg-5 d-none d-lg-block wow zoomIn">
