--- a/privacy.html
+++ b/privacy.html
@@ -31,7 +31,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark navbar-floating">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <strong class="text-light">KPIN.IN</strong>
+              <img src="assets/KPIN.svg" alt="" width="90" height="80">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
                 aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,16 +41,16 @@
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <ul class="navbar-nav  mt-2 mt-lg-0">
                    
-                  <li class="nav-item dropdown active">
+                  <!-- <li class="nav-item dropdown active">
                     <a class="nav-link " href="index.html"><strong>Home</strong></a>         
                   </li>
                   <li class="nav-item">
                     <a class="nav-link " href="howitworks.html"><strong>How It Works</strong></a>
-                  </li>
+                  </li> -->
                    
                 </ul>
                 <div class="ml-auto my-2 my-lg-0">
-                    <button class="btn btn-primary rounded-pill">Download Now</button>
+                    <button class="btn btn-primary rounded-pill">Login</button>
                 </div>
             </div>
         </div>
